NIFI-14720 Corrected inefficient String blank checking